regression/fail/pat.1.sml
val _ =
   case 13.0 of
      14.0 => ()
;
